--- a/package.json
+++ b/package.json
@@ -27,10 +27,20 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/estraverse": "^5.1.1",
+    "@types/estree": "0.0.50",
     "@types/node": "^14.11.2",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.3",
     "gts": "^3.1.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "acorn": "^8.5.0",
+    "commander": "^8.3.0",
+    "estraverse": "^5.3.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
